--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ name = "finance"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0", features = ["derive"] }
+config = { version = "0.13", default-features = false, features = ["yaml"] }
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
