--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 config = { version = "0.13", default-features = false, features = ["yaml"] }
+env_logger = "0.10.0"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
