--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,11 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 config = { version = "0.13", default-features = false, features = ["yaml"] }
-env_logger = "0.10.0"
+log = "0.4.17"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3.6"
+tracing-log = "0.1.3"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
