--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,18 @@ tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = "0.3.6"
 tracing-log = "0.1.3"
 tracing-actix-web = "0.7.2"
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+    "offline"
+]
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
