--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,18 +25,13 @@ tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = "0.3.6"
 tracing-log = "0.1.3"
 tracing-actix-web = "0.7.2"
+serde-aux = "4.1.2"
+unicode-segmentation = "1.10.0"
+uuid = { version = "1", features = ["v4"] }
 [dependencies.sqlx]
-version = "0.6"
+version = "0.6.2"
 default-features = false
-features = [
-    "runtime-actix-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono",
-    "migrate",
-    "offline"
-]
+features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
 
 [dev-dependencies]
 once_cell = "1.17.0"
