--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://dbadmin:dbadmin@localhost:5432/finance"
+DATABASE_URL="postgres://dbadmin:dbadmin@localhost:5432/financedb"
